--- a/content/automating-repetitive-tasks-productivity-hacks-for-developers/index.mdx
+++ b/content/automating-repetitive-tasks-productivity-hacks-for-developers/index.mdx
@@ -1,13 +1,13 @@
 ---
-title: "Automating Repetitive Tasks: Productivity Hacks for Developers"
+title: 'Automating Repetitive Tasks: Productivity Hacks for Developers'
 description: How to deploy your Next.js apps on Vercel.
-image: "../../public/catchitPosts/emile-perron-xrVDYZRGdw4-unsplash.jpg"
-publishedAt: "2023-01-01"
-updatedAt: "2023-01-01"
-author: "codebucks"
+image: '../../public/catchitPosts/emile-perron-xrVDYZRGdw4-unsplash.jpg'
+publishedAt: '2023-01-01'
+updatedAt: '2023-01-01'
+author: 'codebucks'
 isPublished: true
-tags: 
-- productivity
+tags:
+  - productivity
 ---
 
 Until now, trying to style an article, document, or blog post with Tailwind has been a tedious task that required a keen eye for typography and a lot of complex custom CSS.
@@ -66,11 +66,11 @@ Something a wise person once told me about typography is:
 It's probably important that images look okay here by default as well:
 
 <Image
-  src="/blogs/c-d-x-PDX_a_82obo-unsplash.jpg"
-  width="718"
-  height="404"
-  alt="Image"
-  sizes="100vw"
+  src='/catchitPosts/c-d-x-PDX_a_82obo-unsplash.jpg'
+  width='718'
+  height='404'
+  alt='Image'
+  sizes='100vw'
 />
 
 Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
