--- a/content/best-practices-for-writing-clean-and-maintainable-code/index.mdx
+++ b/content/best-practices-for-writing-clean-and-maintainable-code/index.mdx
@@ -1,16 +1,14 @@
 ---
-title: "Best Practices for Writing Clean and Maintainable Code"
+title: 'Best Practices for Writing Clean and Maintainable Code'
 description: How to deploy your Next.js apps on Vercel.
-image: "../../public/catchitPosts/roman-synkevych-vXInUOv1n84-unsplash.jpg"
-publishedAt: "2023-01-02"
-updatedAt: "2023-01-02"
-author: "codebucks"
+image: '../../public/catchitPosts/roman-synkevych-vXInUOv1n84-unsplash.jpg'
+publishedAt: '2023-01-02'
+updatedAt: '2023-01-02'
+author: 'codebucks'
 isPublished: true
-tags: 
-- code quality
+tags:
+  - code quality
 ---
-
-
 
 Until now, trying to style an article, document, or blog post with Tailwind has been a tedious task that required a keen eye for typography and a lot of complex custom CSS.
 
@@ -68,11 +66,11 @@ Something a wise person once told me about typography is:
 It's probably important that images look okay here by default as well:
 
 <Image
-  src="/blogs/c-d-x-PDX_a_82obo-unsplash.jpg"
-  width="718"
-  height="404"
-  alt="Image"
-  sizes="100vw"
+  src='/catchitPosts/c-d-x-PDX_a_82obo-unsplash.jpg'
+  width='718'
+  height='404'
+  alt='Image'
+  sizes='100vw'
 />
 
 Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
@@ -125,7 +123,7 @@ module.exports = {
   },
   variants: {},
   plugins: [],
-}
+};
 ```
 
 Hopefully that looks good enough to you.
