--- a/content/building-progressive-web-apps-bridging-the-gap-between-web-and-mobile/index.mdx
+++ b/content/building-progressive-web-apps-bridging-the-gap-between-web-and-mobile/index.mdx
@@ -1,16 +1,14 @@
 ---
-title: "Building Progressive Web Apps: Bridging the Gap Between Web and Mobile"
-description: "Integrating mindfulness practices helps developers cultivate present-moment awareness, fostering focus, problem-solving, and work-life balance."
-image: "../../public/catchitPosts/charlesdeluvio-cZr2sgaxy3Q-unsplash.jpg"
-publishedAt: "2023-01-04"
-updatedAt: "2023-01-04"
-author: "codebucks"
+title: 'Building Progressive Web Apps: Bridging the Gap Between Web and Mobile'
+description: 'Integrating mindfulness practices helps developers cultivate present-moment awareness, fostering focus, problem-solving, and work-life balance.'
+image: '../../public/catchitPosts/charlesdeluvio-cZr2sgaxy3Q-unsplash.jpg'
+publishedAt: '2023-01-04'
+updatedAt: '2023-01-04'
+author: 'codebucks'
 isPublished: true
 tags:
-- web development
+  - web development
 ---
-
-
 
 Until now, trying to style an article, document, or blog post with Tailwind has been a tedious task that required a keen eye for typography and a lot of complex custom CSS.
 
@@ -68,11 +66,11 @@ Something a wise person once told me about typography is:
 It's probably important that images look okay here by default as well:
 
 <Image
-  src="/blogs/c-d-x-PDX_a_82obo-unsplash.jpg"
-  width="718"
-  height="404"
-  alt="Image"
-  sizes="100vw"
+  src='/catchitPosts/c-d-x-PDX_a_82obo-unsplash.jpg'
+  width='718'
+  height='404'
+  alt='Image'
+  sizes='100vw'
 />
 
 Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
@@ -125,7 +123,7 @@ module.exports = {
   },
   variants: {},
   plugins: [],
-}
+};
 ```
 
 Hopefully that looks good enough to you.
