--- a/content/mastering-css-grid-layout/index.mdx
+++ b/content/mastering-css-grid-layout/index.mdx
@@ -1,17 +1,15 @@
 ---
-title: "Mastering CSS Grid Layout: A Comprehensive Guide"
-description: "Dive into the world of CSS Grid Layout with this comprehensive guide. Learn how to create responsive and dynamic layouts using CSS Grid, and explore various examples and best practices for building modern web interfaces."
-image: "../../public/catchitPosts/kelly-sikkema--1_RZL8BGBM-unsplash.jpg"
-publishedAt: "2022-11-12"
-updatedAt: "2022-11-12"
-author: "codebucks"
+title: 'Mastering CSS Grid Layout: A Comprehensive Guide'
+description: 'Dive into the world of CSS Grid Layout with this comprehensive guide. Learn how to create responsive and dynamic layouts using CSS Grid, and explore various examples and best practices for building modern web interfaces.'
+image: '../../public/catchitPosts/kelly-sikkema--1_RZL8BGBM-unsplash.jpg'
+publishedAt: '2022-11-12'
+updatedAt: '2022-11-12'
+author: 'codebucks'
 isPublished: true
 tags:
-- css
-- web development
+  - css
+  - web development
 ---
-
-
 
 Until now, trying to style an article, document, or blog post with Tailwind has been a tedious task that required a keen eye for typography and a lot of complex custom CSS.
 
@@ -69,11 +67,11 @@ Something a wise person once told me about typography is:
 It's probably important that images look okay here by default as well:
 
 <Image
-  src="/blogs/c-d-x-PDX_a_82obo-unsplash.jpg"
-  width="718"
-  height="404"
-  alt="Image"
-  sizes="100vw"
+  src='/catchitPosts/c-d-x-PDX_a_82obo-unsplash.jpg'
+  width='718'
+  height='404'
+  alt='Image'
+  sizes='100vw'
 />
 
 Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
@@ -126,7 +124,7 @@ module.exports = {
   },
   variants: {},
   plugins: [],
-}
+};
 ```
 
 Hopefully that looks good enough to you.
