--- a/content/mindfulness-and-meditation-techniques-for-developers-improving-focus-and-clarity/index.mdx
+++ b/content/mindfulness-and-meditation-techniques-for-developers-improving-focus-and-clarity/index.mdx
@@ -1,13 +1,13 @@
 ---
-title: "Mindfulness and Meditation Techniques for Developers: Improving Focus and Clarity"
-description: "Integrating mindfulness practices helps developers cultivate present-moment awareness, fostering focus, problem-solving, and work-life balance."
-image: "../../public/catchitPosts/c-d-x-PDX_a_82obo-unsplash.jpg"
-publishedAt: "2023-01-03"
-updatedAt: "2023-01-03"
-author: "codebucks"
+title: 'Mindfulness and Meditation Techniques for Developers: Improving Focus and Clarity'
+description: 'Integrating mindfulness practices helps developers cultivate present-moment awareness, fostering focus, problem-solving, and work-life balance.'
+image: '../../public/catchitPosts/c-d-x-PDX_a_82obo-unsplash.jpg'
+publishedAt: '2023-01-03'
+updatedAt: '2023-01-03'
+author: 'codebucks'
 isPublished: true
 tags:
-- productivity
+  - productivity
 ---
 
 Until now, trying to style an article, document, or blog post with Tailwind has been a tedious task that required a keen eye for typography and a lot of complex custom CSS.
@@ -66,11 +66,11 @@ Something a wise person once told me about typography is:
 It's probably important that images look okay here by default as well:
 
 <Image
-  src="/blogs/c-d-x-PDX_a_82obo-unsplash.jpg"
-  width="718"
-  height="404"
-  alt="Image"
-  sizes="100vw"
+  src='/catchitPosts/c-d-x-PDX_a_82obo-unsplash.jpg'
+  width='718'
+  height='404'
+  alt='Image'
+  sizes='100vw'
 />
 
 Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
@@ -123,7 +123,7 @@ module.exports = {
   },
   variants: {},
   plugins: [],
-}
+};
 ```
 
 Hopefully that looks good enough to you.
