--- a/content/progressive-web-apps-pwa/index.mdx
+++ b/content/progressive-web-apps-pwa/index.mdx
@@ -1,16 +1,14 @@
 ---
-title: "The Rise of Progressive Web Apps (PWAs): A Game Changer in Web Development"
-description: "Progressive Web Apps (PWAs) have transformed how users interact with web applications. Learn about the benefits of PWAs, their architecture, and how to build highly performant, offline-capable web apps using modern web technologies."
-image: "../../public/catchitPosts/carlos-muza-hpjSkU2UYSU-unsplash.jpg"
-publishedAt: "2022-11-12"
-updatedAt: "2022-11-12"
-author: "codebucks"
+title: 'The Rise of Progressive Web Apps (PWAs): A Game Changer in Web Development'
+description: 'Progressive Web Apps (PWAs) have transformed how users interact with web applications. Learn about the benefits of PWAs, their architecture, and how to build highly performant, offline-capable web apps using modern web technologies.'
+image: '../../public/catchitPosts/carlos-muza-hpjSkU2UYSU-unsplash.jpg'
+publishedAt: '2022-11-12'
+updatedAt: '2022-11-12'
+author: 'codebucks'
 isPublished: true
 tags:
-- PWA
+  - PWA
 ---
-
-
 
 Until now, trying to style an article, document, or blog post with Tailwind has been a tedious task that required a keen eye for typography and a lot of complex custom CSS.
 
@@ -68,11 +66,11 @@ Something a wise person once told me about typography is:
 It's probably important that images look okay here by default as well:
 
 <Image
-  src="/blogs/c-d-x-PDX_a_82obo-unsplash.jpg"
-  width="718"
-  height="404"
-  alt="Image"
-  sizes="100vw"
+  src='/catchitPosts/c-d-x-PDX_a_82obo-unsplash.jpg'
+  width='718'
+  height='404'
+  alt='Image'
+  sizes='100vw'
 />
 
 Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
@@ -125,7 +123,7 @@ module.exports = {
   },
   variants: {},
   plugins: [],
-}
+};
 ```
 
 Hopefully that looks good enough to you.
