--- a/content/web-accessibility-best-practices/index.mdx
+++ b/content/web-accessibility-best-practices/index.mdx
@@ -1,16 +1,14 @@
 ---
-title: "Best Practices for Web Accessibility: Building Inclusive Websites"
-description: "Ensuring web accessibility is vital for reaching a broader audience and creating inclusive digital experiences. This blog highlights essential web accessibility best practices, guidelines, and tools to make your websites accessible to everyone."
-image: "../../public/catchitPosts/marvin-meyer-SYTO3xs06fU-unsplash.jpg"
-publishedAt: "2022-11-12"
-updatedAt: "2022-11-12"
-author: "codebucks"
+title: 'Best Practices for Web Accessibility: Building Inclusive Websites'
+description: 'Ensuring web accessibility is vital for reaching a broader audience and creating inclusive digital experiences. This blog highlights essential web accessibility best practices, guidelines, and tools to make your websites accessible to everyone.'
+image: '../../public/catchitPosts/marvin-meyer-SYTO3xs06fU-unsplash.jpg'
+publishedAt: '2022-11-12'
+updatedAt: '2022-11-12'
+author: 'codebucks'
 isPublished: true
 tags:
-- code quality
+  - code quality
 ---
-
-
 
 Until now, trying to style an article, document, or blog post with Tailwind has been a tedious task that required a keen eye for typography and a lot of complex custom CSS.
 
@@ -68,11 +66,11 @@ Something a wise person once told me about typography is:
 It's probably important that images look okay here by default as well:
 
 <Image
-  src="/blogs/c-d-x-PDX_a_82obo-unsplash.jpg"
-  width="718"
-  height="404"
-  alt="Image"
-  sizes="100vw"
+  src='/catchitPosts/c-d-x-PDX_a_82obo-unsplash.jpg'
+  width='718'
+  height='404'
+  alt='Image'
+  sizes='100vw'
 />
 
 Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
@@ -125,7 +123,7 @@ module.exports = {
   },
   variants: {},
   plugins: [],
-}
+};
 ```
 
 Hopefully that looks good enough to you.
